# uwp_compat

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: uwp_compat-config.cmake
include/uwp_compat/: dlfcn.h  encoding.h  io.h  path.h  random.h  uwp_compat.h
src/: dlfcn.cpp  encoding.cpp  internal.hpp  io.cpp  path.cpp  process.cpp  random.cpp
